--- a/src/index.css
+++ b/src/index.css
@@ -31,5 +31,18 @@
 
 .ant-modal-footer{
   display: none !important;
-
+}
+.search-form::before{
+  font-family: "Font Awesome 5 Free";
+ content: "\f002";
+ display: block;
+  position: absolute;
+ display: inline-block;
+ padding-right: 3px;
+ font-weight: 900;
+ top: 8px;
+  left: 15px;
+  z-index: 10; 
+  font-size: 18px !important;
+  color: #00000080 !important;
 }
